src/index.css
body {
  margin: 0 auto;
  display: flex;
  justify-content: center; /* horizontal center */
}

.navbar {
 width: 100%;
}

.navbar .signup-btn {
  text-decoration: none;
  color: #2c2929;
}

.navbar .signup-btn:hover {
  color: #000;
}

.weather-card {
  width: 25rem;
  position: relative;
  display: flex;
  justify-content: space-between;
}

.search-container {
  margin-bottom: 2rem;
}

.search-bar {
  width: 30rem;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px 0 0 5px;
}

.search-button {
  padding: 10px 20px;
  border: none;
  background-color: #000000;
  color: white;
  border-radius: 0 5px 5px 0;
  cursor: pointer;
}

/* Login */
.login-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.login-card {
  background-color: #929090;
  padding: 2rem;
  border-radius: 12px;
  width: 320px;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
}

.login-form h2 {
  color: #000;
  text-align: center;
  margin-bottom: 1.5rem;
}

.login-form label {
  color: white;
  display: block;
  margin-bottom: 0.5rem;
  font-weight: 500;
}

.login-form input {
  display: block;
  width: 100%;
  padding: 0.6rem;
  margin-bottom: 1rem;
  border: 1px solid #ccc;
  border-radius: 6px;
}

.login-form button {
  width: 100%;
  padding: 0.6rem;
  background-color: black;
  color: #fff;
  border: none;
  border-radius: 6px;
  font-weight: bold;
  cursor: pointer;
  margin-top: 1.5rem;
}

.login-form button:hover {
  background-color: #ddd;
  color: black;
}

